doiab/2-vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "VPC with 2 public and 2 private subnets",
  "Parameters": {
    "accountTag": {
      "Type": "String",
      "Description": "Tag for naming",
      "Default": "prft"
    },
    "vpcCIDR": {
      "Description": "CIDR block range for entire VPC",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "10.0.0.0/16",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x"
    },
    "public1SubnetCIDR": {
      "Description": "CIDR block range for public-1 subnet",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "10.0.8.0/24",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x"
    },
    "public2SubnetCIDR": {
      "Description": "CIDR block range for public-2 subnet",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "10.0.9.0/24",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x"
    },
    "private1SubnetCIDR": {
      "Description": "CIDR block range for private-1 subnet",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "10.0.10.0/24",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x"      
    },
    "private2SubnetCIDR": {
      "Description": "CIDR block range for private-2 subnet",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "10.0.11.0/24",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x"
    }
  },
  "Mappings": {},
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {"Ref": "vpcCIDR"},
        "EnableDnsHostnames": "true",
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Join": ["-",["devopsinabox",{"Ref": "accountTag"}]]}}
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Join": ["-",["devopsinabox",{"Ref": "accountTag"}]]}}
        ]
      }
    }, 
    "InternetGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "InternetGatewayId": {"Ref": "InternetGateway"}
      }
    },
    "Public1Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "AvailabilityZone": {"Fn::Join": ["",[{"Ref": "AWS::Region"},"a"]]},
        "CidrBlock": {"Ref": "public1SubnetCIDR"},
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Join": ["",[{"Ref": "VPC"}," | public-1"]]}}
        ]
      }
    },
    "Public2Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "AvailabilityZone": {"Fn::Join": ["",[{"Ref": "AWS::Region"},"c"]]},
        "CidrBlock": {"Ref": "public2SubnetCIDR"},
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Join": ["",[{"Ref": "VPC"}," | public-2"]]}}
        ]
      }
    },
    "EIPforNAT": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NAT": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {"Fn::GetAtt": ["EIPforNAT", "AllocationId"]},
        "SubnetId": {"Ref": "Public1Subnet"},
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Join": ["-",["devopsinabox",{"Ref": "accountTag"}]]}}
        ]
      }
    },
    "Private1Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "AvailabilityZone": {"Fn::Join": ["",[{"Ref": "AWS::Region"},"a"]]},
        "CidrBlock": {"Ref": "private1SubnetCIDR"},
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Join": ["",[{"Ref": "VPC"}," | private-1"]]}}
        ]
      }
    },
    "Private2Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "AvailabilityZone": {"Fn::Join": ["",[{"Ref": "AWS::Region"},"c"]]},
        "CidrBlock": {"Ref": "private2SubnetCIDR"},
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Join": ["",[{"Ref": "VPC"}," | private-2"]]}}
        ]
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Join": ["-",["devopsinabox",{"Ref": "accountTag"},"public"]]}}
        ]
      }
    },
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {"Ref": "PublicRouteTable"},
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {"Ref": "InternetGateway"}
      }
    },
    "Public1SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {"Ref": "Public1Subnet"},
        "RouteTableId": {"Ref": "PublicRouteTable"}
      }
    },
    "Public2SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {"Ref": "Public2Subnet"},
        "RouteTableId": {"Ref": "PublicRouteTable"}
      }
    },
    "PrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Join": ["-",["devopsinabox",{"Ref": "accountTag"},"private"]]}}
        ]
      }
    },
    "PrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {"Ref": "PrivateRouteTable"},
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {"Ref": "NAT"}
      }
    },
    "Private1SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {"Ref": "Private1Subnet"},
        "RouteTableId": {"Ref": "PrivateRouteTable"}
      }
    },
    "Private2SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {"Ref": "Private2Subnet"},
        "RouteTableId": {"Ref": "PrivateRouteTable"}
      }
    },
    "EndpointS3": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "RouteTableIds": [{"Ref": "PublicRouteTable"},{"Ref": "PrivateRouteTable"}],
        "ServiceName": {"Fn::Join": ["",["com.amazonaws.",{"Ref": "AWS::Region"},".s3"]]},
        "VpcId": {"Ref": "VPC"}
      }
    },
    "EndpointDynamoDB": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "RouteTableIds": [{"Ref": "PublicRouteTable"},{"Ref": "PrivateRouteTable"}],
        "ServiceName": {"Fn::Join": ["",["com.amazonaws.",{"Ref": "AWS::Region"},".dynamodb"]]},
        "VpcId": {"Ref": "VPC"}
      }
    }
  },
  "Outputs": {
    "vpcID": {
      "Description": "ID of VPC",
      "Value": {"Ref": "VPC"},
      "Export": {"Name": {"Fn::Join": ["-", ["devopsinabox",{"Ref": "accountTag"},"vpc-id"]]}}
    },
    "Public1SubnetID": {
      "Description": "ID of public-1 subnet",
      "Value": {"Ref": "Public1Subnet"},
      "Export": {"Name": {"Fn::Join": ["-", ["devopsinabox",{"Ref": "accountTag"},"public-1-subnet-id"]]}}
    },
    "Public1SubnetAZ": {
      "Description": "AZ of public-1 subnet",
      "Value": {"Fn::GetAtt": ["Public1Subnet", "AvailabilityZone"]},
      "Export": {"Name": {"Fn::Join": ["-", ["devopsinabox",{"Ref": "accountTag"},"public-1-az"]]}}
    },
    "Public2SubnetID": {
      "Description": "ID of public-2 subnet",
      "Value": {"Ref": "Public2Subnet"},
      "Export": {"Name": {"Fn::Join": ["-", ["devopsinabox",{"Ref": "accountTag"},"public-2-subnet-id"]]}}
    },
    "Public2SubnetAZ": {
      "Description": "AZ of public-2 subnet",
      "Value": {"Fn::GetAtt": ["Public2Subnet", "AvailabilityZone"]},
      "Export": {"Name": {"Fn::Join": ["-", ["devopsinabox",{"Ref": "accountTag"},"public-2-az"]]}}
    },
    "Private1SubnetID": {
      "Description": "ID of prvate-1 subnet",
      "Value": {"Ref": "Private1Subnet"},
      "Export": {"Name": {"Fn::Join": ["-", ["devopsinabox",{"Ref": "accountTag"},"private-1-subnet-id"]]}}
    },
    "Private1SubnetAZ": {
      "Description": "AZ of private-1 subnet",
      "Value": {"Fn::GetAtt": ["Private1Subnet", "AvailabilityZone"]},
      "Export": {"Name": {"Fn::Join": ["-", ["devopsinabox",{"Ref": "accountTag"},"private-1-az"]]}}
    },
    "Private2SubnetID": {
      "Description": "ID of private-2 subnet",
      "Value": {"Ref": "Private2Subnet"},
      "Export": {"Name": {"Fn::Join": ["-", ["devopsinabox",{"Ref": "accountTag"},"private-2-subnet-id"]]}}
    },
    "Private2SubnetAZ": {
      "Description": "AZ of private-2 subnet",
      "Value": {"Fn::GetAtt": ["Private2Subnet", "AvailabilityZone"]},
      "Export": {"Name": {"Fn::Join": ["-", ["devopsinabox",{"Ref": "accountTag"},"private-2-az"]]}}
    },
    "EndpointS3ID": {
      "Description": "S3 endpoint ID",
      "Value": {"Ref": "EndpointS3"},
      "Export": {"Name": {"Fn::Join": ["-", ["devopsinabox",{"Ref": "accountTag"},"s3-endpoint-id"]]}}
    },
    "EndpointDynamoDBID": {
      "Description": "DynamoDB endpoint ID",
      "Value": {"Ref": "EndpointDynamoDB"},
      "Export": {"Name": {"Fn::Join": ["-", ["devopsinabox",{"Ref": "accountTag"},"dynamodb-endpoint-id"]]}}
    }
  }
}
